--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=yolo
 spring.data.mongodb.password=password
-spring.data.mongodb.database=Hotel
+spring.data.mongodb.database=Hotel_2
 
